Notes/learn/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mac-nginx-gateway-instance
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All   
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: referencegrant
  namespace: mac
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  - group: ""
    kind: Service
    name: nservice

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mac-httproute
spec:
  parentRefs:
  - name: mac-nginx-gateway-instance
  hostnames:
  - "mac.local.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nservice
      namespace: mac
      port: 5000







# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: example-httproute
# spec:
#   parentRefs:
#   - name: example-gateway
#   hostnames:
#   - "www.example.com"
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /login
#     backendRefs:
#     - name: example-svc
#       port: 8080
# ---
